pure: Avoid p nesting and iamge overlaps

--- a/templates/pure/style.css
+++ b/templates/pure/style.css
@@ -807,6 +807,7 @@ nav.pager ul {
 /** Entries **/
 #content p {
     word-break: break-word;
+    overflow: auto; /*avoids nesting and overlaps*/
 }
 .post_content {
     display: inline-block;
